--- a/07-ResponsiveSizeTwoSection/style.css
+++ b/07-ResponsiveSizeTwoSection/style.css
@@ -11,7 +11,7 @@
 section{
     width: 100%;
     height: 50vh;
-    background-color: rgb(142, 142, 156);
+    background-color: rgb(182, 182, 193);
 }
 .right{
     margin-top: 30px;
@@ -26,7 +26,7 @@ section .head{
     padding: 60px;
 }
 .cheach-out h4{
-    color: green;
+    color: rgb(10, 139, 10);
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
@@ -86,7 +86,7 @@ margin-bottom: 20px;
 }
 .home .tea{
     justify-content: space-between;
-    background-color: rgb(174, 174, 186);
+    background-color: rgb(203, 203, 210);
 }
 .tea img{
     width: 100%;
@@ -112,12 +112,19 @@ margin-bottom: 20px;
     left: 30%;
 }
 .tea .fa-solid{
-    border-radius: 4px;
+    width: 50px;
+    height: 50px;
+    border: 3px solid white;
     background-color:greenyellow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
     color: green;
-   text-align: center;
+  bottom: 35px;
+  border-radius: 15px;
    position:relative;
-   left: 45%;
+  
 
 }
 @media screen and (max-width:767px) {
@@ -138,7 +145,7 @@ margin-bottom: 20px;
     .right{
         flex-direction: column;
         padding: 0 50px;
-        background-color: rgb(174, 174, 186);
+        background-color: rgb(201, 201, 222);
     }
     .right .ginger {
         width: 50%;
