--- a/09.loopstudio-landing-page/style.css
+++ b/09.loopstudio-landing-page/style.css
@@ -1,67 +1,196 @@
-*{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
-.container{
-    max-width: 1200px;
-    margin: 0 auto;
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
 }
-.bg-section{
-    background: url(./image-hero.jpg);
-    height: 100vh;
-    background-repeat: no-repeat;
+.bg-section {
+  background: url(./image-hero.jpg);
+  height: 100vh;
+  background-repeat: no-repeat;
 }
-.header .head{
-    height: 5rem;
+.header .head {
+  height: 5rem;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav ul,
+li,
+li,
+a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  color: white;
+}
+.header .head .icon .fa-solid {
+  display: none;
+  color: white;
+  padding: 15px;
+}
+@media screen and (max-width: 1023px) {
+  .header .head .nav {
+    display: none;
+  }
+  .header .head .icon .fa-solid {
+    display: block;
     color: white;
+    padding: 15px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .header .head .nav ul,
+  li a {
+    display: none;
+  }
+}
+
+.main {
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 40px;
+  width: 50%;
+  border: 2px solid white;
+  padding: 20px;
+  margin: 220px 30px;
+}
+.interactive {
+  display: flex;
+  gap: 20px;
+}
+.left {
+  width: 50%;
+}
+.left img {
+  width: 600px;
+  height: 500px;
+  position: relative;
+}
+.right {
+  border: 2px solid white;
+  background-color: white;
+  height: 300px;
+  padding: 70px;
+  position: relative;
+  top: 200px;
+  right: 150px;
+}
+.right h1 {
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+.CREAT {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px;
+}
+.see-all {
+  height: 25px;
+  width: 90px;
+  background-color: white;
+}
+@media screen and (max-width: 1023px) {
+  .interactive {
+    display: flex;
+    flex-direction: column;
+  }
+  .left img {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .right{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media screen and (max-width:767px){
+      .interactive{
+        display: flex;
+        flex-direction: column;
+      }    
+      .left img{
+        width:100% ;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .right {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+}
+/*main img*/
+.row-1 .img-2{
+    display: none;
+    
+}
+.row .img-1{
+    gap: 5px;
+    border: 5px solid black;
+    width: 200px;
+    
+
+}
+
+
+.row{
     display: flex;
     justify-content:space-between;
     align-items: center;
 }
-nav ul,li,li,a{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    color: white;
+@media screen and (max-width:767px) {
+      .row-1 .img-2{
+        display: block;
+      } 
+      .row-1 .img-1{
+        display: none;
+      }
 }
-.main {
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 40px;
-    width: 50%;
-    border: 2px solid white;
-    padding: 20px;
-    margin: 220px 30px;
+
+
+/*footer*/
+.footer {
+  background-color: black;
+  height: 20vh;
 }
-.interactive{
-    display: flex;
-    gap: 20px;
+.foot {
+  padding: 15px;
 }
-.left{
-    width: 50%;
+.top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.left img{
-   width: 600px;
-   height: 500px;
-   position: relative;
+.top h3 {
+  color: rgb(238, 236, 236);
 }
-.right{
-    border: 2px solid white;
-    background-color: white;
-    height: 300px;
-    padding: 70px;
-    position: relative;
-    top: 200px;
-    right: 150px;
-   
+.one ul,
+li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.right h1{
-    font-size: 40px;
-    margin-bottom: 20px;
+.bootom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+.media h3 {
+  color: rgb(126, 118, 118);
+}
+
