--- a/22.11.snobella-website/assets/sass/pages/_main.scss
+++ b/22.11.snobella-website/assets/sass/pages/_main.scss
@@ -1,5 +1,5 @@
 #main {
-    background-color: $third-background-color;
+    background-color: $main2background-color;
     padding: 20px;
   
     .main {
