--- a/22.11.snobella-website/assets/sass/pages/_about.scss
+++ b/22.11.snobella-website/assets/sass/pages/_about.scss
@@ -1,5 +1,5 @@
 #about {
-  background-color: $main1background-color;
+  background-color: $first-background-color;
 
   .about {
     @include flex();
