--- a/22.11.snobella-website/assets/sass/main.scss
+++ b/22.11.snobella-website/assets/sass/main.scss
@@ -1,5 +1,5 @@
 @import "./base/reset";
-@import "./base/global";
+// @import "./base/global";
 @import "./utils/variables";
 @import "./utils/mixin";
 @import "./components/button";
